--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,5 +1,8 @@
 {
 	"files.associations": {
-		"vector": "cpp"
+		"vector": "cpp",
+		"ostream": "cpp",
+		"iosfwd": "cpp",
+		"iterator": "cpp"
 	}
 }
