--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -68,6 +68,7 @@
     "tuple": "cpp",
     "type_traits": "cpp",
     "typeinfo": "cpp",
-    "memory_resource": "cpp"
+    "memory_resource": "cpp",
+    "__functional_03": "cpp"
   }
 }
